<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open"
        android:title="@string/action_open"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_save_24dp" />

    <item
        android:id="@+id/action_saveas"
        android:title="@string/action_saveas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_execute"
        android:title="@string/action_execute"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_play_arrow_24dp" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>